--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 .container {
-  max-width: 80%;
+  max-width: 100%;
   position: relative;
   margin: auto;
 }
@@ -67,7 +69,7 @@ img{
   position: absolute;
   bottom: 8px;
   color: white;
-  font-size: green;
+  font-size: 25px;
   font-weight: bold;
   width: 100%;
   text-align: center;
@@ -84,3 +86,4 @@ img{
   from {opacity: .4}
   to {opacity: 1}
 }
+
